--- a/TwitterSentiment.ipynb
+++ b/TwitterSentiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPurU7r45mu260k6++tMfa1",
+      "authorship_tag": "ABX9TyMAx/C7KFJZTiLfHtItrAUm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,7 +537,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Scraping tweets from World Cup 1st and last week within the ESPN account."
+        "Scraping tweets from World Cup 1st and last week within the FOX Sports account."
       ],
       "metadata": {
         "id": "jYTf6T_dr611"
